--- a/index.html
+++ b/index.html
@@ -18,5 +18,29 @@
             </p>
         </div>
     </div>
+
+    <div class="pokemon-card">
+        <img class="pokemon-image" src="images/bulbasaur.png" alt="Imatge del Pokémon">
+        <div class="pokemon-info">
+            <h2 class="pokemon-name">Bulbasaur</h2>
+            <p class="pokemon-type plant">Planta</p>
+            <p class="pokemon-type poison">Verí</p>
+            <p class="pokemon-description">
+                Bulbasaur és un Pokémon de tipus Planta i Verí. És fàcil distingir-lo per la llavor que té a l'esquena, que creix a mesura que ell ho fa.
+            </p>
+        </div>
+    </div>
+
+    <div class="pokemon-card">
+        <img class="pokemon-image" src="images/bulbasaur.png" alt="Imatge del Pokémon">
+        <div class="pokemon-info">
+            <h2 class="pokemon-name">Bulbasaur</h2>
+            <p class="pokemon-type plant">Planta</p>
+            <p class="pokemon-type poison">Verí</p>
+            <p class="pokemon-description">
+                Bulbasaur és un Pokémon de tipus Planta i Verí. És fàcil distingir-lo per la llavor que té a l'esquena, que creix a mesura que ell ho fa.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
