--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
         </div>
     </div>
           
+
+    <div class="pokemon-card">
+        <img class="pokemon-image" src="images/miguel.png" alt="Imatge del Pokémon">
+        <div class="pokemon-info">
+            <h2 class="pokemon-name">Pokemon miguel</h2>
+            <p class="pokemon-type mago electrico">Mago electrico</p>
+            <p class="pokemon-type poison">Verí</p>
+            <p class="pokemon-description">
+               Miguel el pajaro loco
+            </p>
+        </div>
+    </div>
+
+
 </body>
 </html>
